# softfloat-2c

./: LICENSE  README.md  meson.build
include/: processor.h  softfloat.h
processors/: rizin.h
softfloat/bits64/rizin/: Makefile  milieu.h  softfloat.h
src/: softfloat.c
